# avito2

./: conftest.py  db.sqlite3  factories.py  pyproject.toml  pytest.ini
ads/: models.py  permissions.py  serializers.py  views.py
ads/migrations/: 0001_initial.py
ads/tests/: test_ads.py  test_selections.py
ads/urls/: ad_urls.py  cat_urls.py  selection_urls.py
avito/: settings.py  urls.py
data/: ads.json  csv to json.py  user.csv  user.json
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_location_lat_alter_location_lng.py
